[project]
name = "polarspark"
description = "Implementation of PySpark's Dataframe API in pola.rs"
version = "0.0.1"
authors = [
    { name = "Paul Staab", email = "no@no.no" }
]
dependencies = [
    "pyspark[sql]",
    "polars",
    "pandas"
]
requires-python = ">=3.10, <4.0"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["I", "E", "F" , "W" , "C", "UP"]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
